# MuseTaia

./: .coverage  .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
app/: main.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
infrastructure/: deployment_guide.md  setup_gcp.sh
scripts/: autonomous_firing_test.py  benchmark_boot.py  bootstrap_system.py  build_and_push.sh  deploy_all.sh  deploy_gke_snapshots.sh  full_lifecycle_simulation.py  launch_smos.py  run_visual_regression.py  setup_check.py  setup_gcp.sh  verify_brain_lobe.py  verify_cfo_gate.py  verify_dispatcher.py  verify_genesis_v2.py  verify_governance_lobe.py  verify_perception_lobe.py  verify_studio_lobe.py  verify_visual_v2.py  verify_vvs_roi.py
tests/: conftest.py  test_anchors.py  test_architect_agent.py  test_assets_manager.py  test_audio_stream.py  test_cfo_agent.py  test_config.py  test_context_cache.py  test_cost_calculator.py  test_creative_studio_integration.py  test_critic_agent.py  test_director_agent.py  test_dna_loader.py  test_eic_agent.py  test_finance_agent.py  test_finance_schemas.py  test_genesis_pipeline.py  test_governance_lobe.py  test_hitl_persistence.py  test_hitl_workflow.py  test_initialization.py  test_interactive_root.py  test_ledger_service.py  test_librarian.py  test_live_api.py  test_live_perception_flow.py  test_master_sync.py  (+29 more)
(+199 files in other folders)
