[project]
name = "musetaia"
version = "0.1.0"
description = "Sovereign Muse OS (SMOS)"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic-settings>=2.0.0",
    "google-cloud-aiplatform>=1.35.0",
    "google-cloud-storage>=2.10.0",
    "redis>=5.0.0",
    "grpcio>=1.57.0",
    "protobuf>=4.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
